// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compiles attribute values > compiles attribute values 1`] = `
"import { ReplexicaServerProxy as _ReplexicaServerProxy } from "@replexica/react/server";
import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <_ReplexicaServerProxy title="Hello!" _ReplexicaComponent="span" _ReplexicaAttributes={{
    "title": {
      "fileId": "fileId_0",
      "scopeId": "scopeId_1",
      "chunkId": "chunkId_1"
    }
  }}><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></_ReplexicaServerProxy>
</div>;"
`;

exports[`Compiles content > jsx assigned to jsx attribute 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <div data-test={<span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_1" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>}><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></div>
</div>;"
`;

exports[`Compiles content > multiple basic spans 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_1" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
</div>;"
`;

exports[`Compiles content > nested basic spans 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  <div>
    <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_1" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  </div>
</div>;"
`;

exports[`Compiles content > nested elements mixed with text 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  <div><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_1" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /><br /><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_2" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /><b><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_3" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></b><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_4" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /><a href="#"><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_5" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></a><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_1" chunkId="chunkId_6" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></div>
</div>;"
`;

exports[`Compiles content > one basic span 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>;"
`;

exports[`Skips nodes marked with \`data-replexica-skip\` > skips a single node 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  <div data-replexica-skip>
    Goodbye, world!
  </div>
</div>;"
`;

exports[`Skips nodes marked with \`data-replexica-skip\` > skips entire subtree 1`] = `
"import { ReplexicaServerChunk as _ReplexicaServerChunk } from "@replexica/react/server";
<div>
  <span><_ReplexicaServerChunk fileId="fileId_0" scopeId="scopeId_0" chunkId="chunkId_0" importer={locale => import(\`./../../i18n/\${locale}.json\`).then(m => m.default)} /></span>
  <div data-replexica-skip>
    Goodbye, world!
    <br />
    You can say <b>hello</b> again by clicking <a href="#">here</a>.
  </div>
</div>;"
`;
